[docs] build.gradle 테스트위한 redis 추가.

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'it.ozimov:embedded-redis:0.7.3'
 
 	//테스트에서 lombok 사용
 	testCompileOnly 'org.projectlombok:lombok'
