--- a/build.gradle
+++ b/build.gradle
@@ -19,19 +19,23 @@ repositories {
 }
 
 dependencies {
-	  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	  compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
-	  runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
-	  runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
-	  implementation 'org.springframework.boot:spring-boot-starter-security'
-	  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	  implementation 'org.springframework.boot:spring-boot-starter-web'
-	  implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-	  implementation group: 'org.json', name: 'json', version: '20220924'
-	  compileOnly 'org.projectlombok:lombok'
-	  runtimeOnly 'com.mysql:mysql-connector-j'
-	  annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
+    implementation group: 'org.json', name: 'json', version: '20220924'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
     // querydsl 추가
     implementation 'com.querydsl:querydsl-jpa'
@@ -39,12 +43,13 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+    // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.security:spring-security-test'
-    testImplementation 'it.ozimov:embedded-redis:0.7.3'
+    testImplementation ('it.ozimov:embedded-redis:0.7.3') {
+        exclude group: "org.slf4j", module: "slf4j-simple"
+    }
 
-    //테스트에서 lombok 사용
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
 }
@@ -63,4 +68,3 @@ jar {
 	enabled = false
 }
  */
-
