--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
     runtimeOnly 'com.mysql:mysql-connector-j'
 
@@ -65,7 +66,7 @@ tasks.named('test') {
 }
 
 clean {
-    delete ('out', 'src/main/generated', 'src/test/generated_tests')
+    delete('out', 'src/main/generated', 'src/test/generated_tests')
 }
 
 /* for Continuous Deployment
