--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 **/src/**/resources/*.properties
+**/src/**/resources/.vscode
 
 ### Querydsl ###
 /src/main/generated/
