[refactor] 테스트용 properties를 gitignore에서 제외
테스트용 properties를 gitignore에서 제외

--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,9 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-**/src/**/resources/*.properties
+**/src/main/resources/*.properties
 **/src/**/resources/.vscode
 
 ### Querydsl ###
 /src/main/generated/
 /src/test/generated_tests/
-*.properties
