--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -14,6 +14,15 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - uses: actions/checkout@v3
 
@@ -31,3 +40,6 @@ jobs:
 
       - name: Test with Gradle
         run: ./gradlew test
+        env:
+          REDIS_HOST: redis
+          REDIS_PORT: 6379
