[test] ci redis run test

--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
 
-    testRuntimeOnly 'com.h2database:h2:1.4.200'
+    testImplementation 'com.h2database:h2:1.4.200'
 }
 
 tasks.named('test') {
