[refactor] CI 시 redis 추가
CI 시 redis 추가

--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -14,6 +14,17 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
+
     steps:
       - uses: actions/checkout@v3
 
@@ -31,3 +42,6 @@ jobs:
 
       - name: Test with Gradle
         run: ./gradlew test
+        env:
+          REDIS_HOST: localhost
+          REDIS_PORT: 6379
