[refactor] 통합 테스트 간 격리
각 통합 테스트 클래스의 테스트 수행 전 context 재성성

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,12 +1,5 @@
-# H2 Config
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MYSQL
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-
-spring.sql.init.continue-on-error=false
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
