--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,12 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
 
     testRuntimeOnly 'com.h2database:h2:1.4.200'
+
+
+    //엑셀
+    implementation group: 'org.apache.poi', name: 'poi', version: '3.9'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.9'
+         
 }
 
 tasks.named('test') {
