[refactor] 코드 변경 후 실패한 테스트 수정
코드 변경 후 실패한 테스트 수정

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.mockito:mockito-inline'
 
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
