--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ec2-user/app/waiting-catch/
+    destination: /home/ec2-user/app/zip
     overwrite: yes
 
 permissions:
@@ -14,6 +14,16 @@ permissions:
 
 hooks:
   AfterInstall:
-    - location: scripts/deploy.sh
+    - location: scripts/stop.sh
+      timeout: 60
+      runas: ec2-user
+
+  ApplicationStart:
+    - location: scripts/start.sh
+      timeout: 60
+      runas: ec2-user
+
+  ValidateService:
+    - location: scripts/health.sh
       timeout: 60
       runas: ec2-user
