--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,11 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-**/src/main/resources/*.properties
 **/src/**/resources/.vscode
+
+**/src/main/resources/application-local.properties
+**/src/main/resources/application-dev.properties
+**/src/main/resources/application-prod.properties
 
 ### Querydsl ###
 /src/main/generated/
