--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ build/
 **/src/main/resources/application-local.properties
 **/src/main/resources/application-dev.properties
 **/src/main/resources/application-prod.properties
+**/src/main/resources/messages.properties
 
 ### Querydsl ###
 /src/main/generated/
