--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'team.watingcatch'
-version = '0.0.1-SNAPSHOT-' + new Date().format("yyyy-MM-dd HH:mm:ss")
+version = '1.0.0-SNAPSHOT'
 sourceCompatibility = '11'
 
 configurations {
