--- a/.github/workflows/gradle-cd.yml
+++ b/.github/workflows/gradle-cd.yml
@@ -32,7 +32,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle
-        run: ./gradlew clean build
+        run: ./gradlew clean build -x test
 
       - name: Before Deploy
         run: |
