--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,11 @@ build/
 **/src/main/resources/application-local.properties
 **/src/main/resources/application-dev.properties
 **/src/main/resources/application-prod.properties
+**/src/main/resources/agent.tar.gz
+**/src/main/resources/agent/**
+
 
 ### Querydsl ###
 /src/main/generated/
 /src/test/generated_tests/
+
